# TraverseCraft

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-template.md  feature_request.md
.github/workflows/: python-app-windows.yml  python-app.yml  python-mac-os-tests.yml  python-package-conda.yml
docs/: Agent.md  DataStructures.md  ReadMe.md  World.md  graphAgent.md  graphWorld.md  gridAgent.md  gridWorld.md  treeAgent.md  treeWorld.md
resources/: AStar.mkv  dijkstra.mkv  level_order.mkv
src/traverseCraft/: agent.py  dataStructures.py  image_hash_map.pkl  mcWorld.py  world.py
taversecraft/: visualizer.py  world.py
tests/: test_graph_agent.py  test_graph_world.py  test_grid_agent.py  test_grid_world.py  test_tree_agent.py  test_tree_world.py
traverseCraft/: agent.py  dataStructures.py  hundred.py  iconHashInfo.py  init.py  mcWorld.py  mcWorldAgent.py  world.py
tutorials/: quickGuid.ipynb
tutorials/Graph World/: advance.ipynb  beginner.ipynb  dijkstra.py
tutorials/Grid World/: a_star.py  advance.ipynb  beginner.ipynb  leetcode_number_of_islands.py  leetcode_unique_path.py  leetcode_unique_path_2.py  number_of_islands.py  unique_path.py  unique_path_2.py
tutorials/Tree World/: advance.ipynb  beginner.ipynb  leetcode_level_order_traversal.py  leetcode_lowest_common_ancestor_od_a_binary_tree.py  level_order_traversal.py  lowest_common_ancestor_of_binary_tree.py
